-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 9
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8149414 | 8u102 | Ankit Srivastava | P3 | Resolved | Fixed | b01 |
The fast/regions/webkit-* tests fail:
fast/regions/webkit-flow-from-parsing.html
fast/regions/webkit-flow-into-parsing.html
fast/regions/webkit-region-fragment-parsing.html
fast/regions/webkit-region-syntax-space.html
These are newly added tests.
fast/regions/webkit-flow-from-parsing.html
fast/regions/webkit-flow-into-parsing.html
fast/regions/webkit-region-fragment-parsing.html
fast/regions/webkit-region-syntax-space.html
These are newly added tests.
- backported by
-
JDK-8149414 Several fast/regions/webkit-* tests fail
-
- Resolved
-
- duplicates
-
JDK-8149414 Several fast/regions/webkit-* tests fail
-
- Resolved
-