8088689: Several fast/regions/webkit-* tests fail

Reviewed-by: azvegint, kcr, mbilla